# nokin

./: .gitignore  Cargo.toml  LICENSE  NATIVE_UI.md  NOTICES  README.md  THIRD_PARTY.md
.github/workflows/: native-ui.yml
crates/scintilla/: Cargo.toml
crates/scintilla-sys/: Cargo.toml  build.rs
crates/scintilla-sys/src/: lib.rs
crates/scintilla/src/: lib.rs
scripts/: fetch-native.sh
src/: completion.rs  config.rs  edit.rs  index.rs  lib.rs  lsp.rs  main.rs  run.rs  theme.rs  ui.rs  vte.rs  workspace.rs
src/ui/: native.rs
