[package]
name = "nokin"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["gtk-ui"]
gtk-ui = ["dep:scintilla"]
native-ui = ["dep:floem", "dep:floem-editor-core", "dep:libc", "dep:rfd", "dep:tokio"]

[dependencies]
floem = { version = "0.2.0", features = ["rfd-tokio"], optional = true }
floem-editor-core = { version = "0.2.0", optional = true }
libc = { version = "0.2.186", optional = true }
rfd = { version = "0.14.1", default-features = false, features = ["tokio", "xdg-portal"], optional = true }
scintilla = { path = "crates/scintilla", optional = true }
serde_json = "1.0.150"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "net"], optional = true }
tree-sitter = "0.26.9"
tree-sitter-c = "0.24.2"
tree-sitter-rust = "0.24.2"
url = "2.5.8"
